--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 		<artifactId>burlap</artifactId>
 		<version>3.0.0</version>
 	</dependency>
+  	<dependency>
+  		<groupId>nz.ac.waikato.cms.weka</groupId>
+  		<artifactId>weka-stable</artifactId>
+  		<version>3.8.0</version>
+  	</dependency>
   </dependencies>
   
   <build>
