--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
   		<artifactId>weka-stable</artifactId>
   		<version>3.8.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.jfree</groupId>
+  		<artifactId>jfreechart</artifactId>
+  		<version>1.0.19</version>
+  	</dependency>
   </dependencies>
   
   <build>
